security/network_policies/nginx/nginx_allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-nginx
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
        app.kubernetes.io/instance: ingress-nginx
  ingress:
  - {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: ingress-ngnx
spec:
  podSelector:
    matchLabels:
        app.kubernetes.io/instance: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
