security/network_policies/nginx/nginx_rules.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-nginx
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
        app.kubernetes.io/instance: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keycloak
      podSelector:
        matchLabels:
          app: kc
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: main
      podSelector:
        matchLabels:
          app: accounts-api
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: main-2
      podSelector:
        matchLabels:
          app: accounts-api
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: temp
      podSelector:
        matchLabels:
          app: accounts-api
    - namespaceSelector:
         matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
         matchLabels:
          k8s-app: kube-dns
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
        app.kubernetes.io/instance: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
